修正了默认刷新事件cron被quartz不认的问题。